--- a/backend/microservice-entrypoint/pom.xml
+++ b/backend/microservice-entrypoint/pom.xml
@@ -12,12 +12,17 @@
 	<artifactId>microservice-entrypoint</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>microservice-entrypoint</name>
-	<description>Microservice connecté à l&apos;UI</description>
+	<description>Microservice connecté à l'UI</description>
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
@@ -27,6 +32,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.deaponnen.common</groupId>
+			<artifactId>common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
